--- a/lipitwist/index.html
+++ b/lipitwist/index.html
@@ -1,17 +1,19 @@
 
 <html>
 	<head>
-		<title>सुन्दर लिपि</title>
+		<title>लिपि Twist</title>
 		<meta http-equiv="Content-Language" content="hi">
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<link rel="manifest" href="manifest.json">
 		<meta name="viewport" content="width=device-width">
 		<meta name="mobile-web-app-capable" content="yes">
+		<link href="https://fonts.googleapis.com/css?family=Rajdhani|Khand|Mukta" rel="stylesheet">
 		<link href ="css/style.css" rel="stylesheet">
 	</head>
 	<body>
 	</body>
 	<script src="js/allScripts.js"></script>
+	<script src="js/data.js"></script>
 	<script src="js/lipi.js"></script>
 	<script src="js/common.js"></script>
 	<script src="js/main.js"></script>
