--- a/lipitwist/index.html
+++ b/lipitwist/index.html
@@ -1,7 +1,7 @@
 
 <html>
 	<head>
-		<title>लिपि Twist</title>
+		<title>लीपि ट्विस्ट</title>
 		<meta http-equiv="Content-Language" content="hi">
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<link rel="manifest" href="manifest.json">
