--- a/lipitwist/index.html
+++ b/lipitwist/index.html
@@ -20,7 +20,7 @@
 		<script>
   	if ('serviceWorker' in navigator) {
     	console.log("Will the service worker register?");
-    	navigator.serviceWorker.register('service-worker.js')
+    	navigator.serviceWorker.register('serviceWorker.js')
       .	then(function(reg){
 			console.log("Yes, it did.");
       	}).catch(function(err) {
