--- a/kenken/index.html
+++ b/kenken/index.html
@@ -1,7 +1,7 @@
 
 <html>
 	<head>
-		<title>लीपि ट्विस्ट</title>
+		<title>केन्-केन्</title>
 		<meta http-equiv="Content-Language" content="hi">
 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 		<link rel="manifest" href="manifest.json">
@@ -13,10 +13,9 @@
 	</head>
 	<body>
 	</body>
-	<script src="js/allScripts.js"></script>
 	<script src="js/data.js"></script>
-	<script src="js/lipi.js"></script>
 	<script src="js/common.js"></script>
+	<script src="js/kenken.js"></script>
 	<script src="js/main.js"></script>
 		<script>
   	if ('serviceWorker' in navigator) {
