--- a/kenken/index.html
+++ b/kenken/index.html
@@ -7,8 +7,9 @@
 		<link rel="manifest" href="manifest.json">
 		<meta name="viewport" content="width=device-width">
 		<meta name="mobile-web-app-capable" content="yes">
-		<link rel="icon" sizes="192x192" href="assets/srivatsa.png">
+		<link rel="icon" sizes="192x192" href="assets/icon.png">
 		<link href="https://fonts.googleapis.com/css?family=Rajdhani|Khand|Mukta" rel="stylesheet">
+		<script src="js/sweetAlert.min.js"></script>
 		<link href ="css/style.css" rel="stylesheet">
 	</head>
 	<body>
